Noteworthy changes for version 1.2.1 (unreleased)
=================================================


Noteworthy changes for version 1.2.0 (2013-08-19)
=================================================

 * Basic support for Outlook 2010 and later.


Noteworthy changes for version 1.1.3 (2011-12-27)
=================================================

 * Fix data corruption bug for certain attachments.  Bug#1352.

 * Fix crash on opening attachments with OL2007.  Bug #1110.

 * Use the GIT commit ids instead of SVN revision numbers for version
   checks and to construct the Windows file version.


Noteworthy changes for version 1.1.2 (2010-07-21)
=================================================

 * Add Portuguese translation

 * Fixed linking problems with latest libgpg-error.


Noteworthy changes for version 1.1.1 (2010-01-13)
=================================================

 * Cleaned up some icons.


Noteworthy changes for version 1.1.0 (2010-01-05)
=================================================

 * Replaced most ECE code by direct OOM code.  This was required to
   support better icons; i.e. icons not limited to a 16 color palette.

 * New icons.

 * Removed protocol selection.  The UI-server is now expected to select
   the protocol (i.e. the auto selection mode is now the only one).


Noteworthy changes for version 1.0.1 (2009-09-28)
=================================================

 * No more event loop peeking to avoid problem with Office programs.

 * S/MIME support is now enabled by default.


Noteworthy changes for version 1.0.0 (2009-06-18)
=================================================

 * Show a notice about potential problems.

 * After about 2 years of development, the 1.0 version is now due.


Noteworthy changes for version 0.10.19 (2009-02-27)
===================================================

 * Save the crypto settings in a message draft.

 * Unnamed attachments are now shown with a suffix matching its MIME
   type.

